--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/cheerio": "^0.22.17",
 		"@types/concat-stream": "^1.6.0",
 		"@types/get-stream": "^3.0.2",
 		"@types/node": "^13.11.0",
+		"@types/through2": "^2.0.34",
+		"cheerio": "^1.0.0-rc.3",
 		"concat-stream": "^2.0.0",
 		"get-stream": "^5.1.0",
 		"mississippi": "^4.0.0",
+		"through2": "^3.0.1",
 		"ts-node": "^8.8.2",
 		"typescript": "^3.8.3"
 	}
