--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
 		"noImplicitAny": true,
+		"module": "CommonJS",
 		"moduleResolution": "node",
 		"resolveJsonModule": true
 	},
