--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,7 @@
 		"moduleResolution": "node",
 		"resolveJsonModule": true
 	},
-	"files": ["src/app.ts"]
+	"files": [
+      "src/phone-crawler-app.ts"
+    ]
 }
