--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"concat-stream": "^2.0.0",
 		"get-stream": "^5.1.0",
 		"mississippi": "^4.0.0",
+		"node-stream-zip": "^1.13.6",
 		"through2": "^3.0.1",
 		"ts-node": "^8.8.2",
 		"ts-node-dev": "^1.0.0-pre.44",
