--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "ts-node src/cosmider-sets-app.ts",
+		"start": "ts-node src/cosmider-sets-app.ts && ts-node src/cosmider-videos-app.ts",
 		"debug": "node --inspect-brk --require ts-node/register src/phone-crawler-app.ts"
 	},
 	"author": "",
